# ofborg

./: .gitignore  Cargo.toml  config.public.json  flake.nix
.github/workflows/: ci.yml
ofborg/: Cargo.toml  build.rs
ofborg-simple-build/: Cargo.toml
ofborg/src/: asynccmd.rs  checkout.rs  clone.rs  commentparser.rs  commitstatus.rs  config.rs  lib.rs  maintainers.rs  nix.rs  nixenv.rs  nixstats.rs  outpathdiff.rs  stats.rs  systems.rs  tagger.rs  test_scratch.rs  worker.rs  writetoline.rs
ofborg/src/ghevent/: common.rs  issuecomment.rs  mod.rs  pullrequestevent.rs
ofborg/src/message/: buildjob.rs  buildlogmsg.rs  buildresult.rs  common.rs  evaluationjob.rs
ofborg/src/tasks/: build.rs  evaluate.rs  evaluationfilter.rs  githubcommentfilter.rs  githubcommentposter.rs  log_message_collector.rs  statscollector.rs
ofborg/src/tasks/eval/: mod.rs  nixpkgs.rs
