[package]
name = "ofborg"
version = "0.1.9"
authors = ["Graham Christensen <graham@grahamc.com>"]
build = "build.rs"
edition = "2021"

[dependencies]
async-std = { version = "=1.12.0", features = ["unstable", "tokio1"] }
brace-expand = "0.1.0"
chrono = { version = "0.4.38", default-features = false, features = [
  "clock",
  "std",
] }
either = "1.13.0"
fs2 = "0.4.3"
futures-util = "0.3.31"
#hubcaps = "0.6"
# for Conclusion::Skipped which is in master
hubcaps = { git = "https://github.com/softprops/hubcaps.git", rev = "d60d157b6638760fc725b2e4e4f329a4ec6b901e", default-features = false, features = ["app", "rustls-tls"] }
# hyper = { version = "0.14", features = ["full"] }
hyper = "=0.10.*"
# maybe can be removed when hyper is updated
http = "0.2"
lapin = "2.5.0"
lru-cache = "0.1.2"
md5 = "0.7.0"
nom = "4.2.3"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tempfile = "3.15.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
uuid = { version = "1.12", features = ["v4"] }
rustls-pemfile = "1.0.2"
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
